# aisinger

./: .gitignore  .impeccable.md  README.md  WINDOWS_MIGRATION_PLAN.md  app.py  pyproject.toml  stopallaisong.sh  stopallgensound.sh
aisinger/: config.py  jobs.py  server.py
aisinger/adapters/: base.py  f5tts_adapter.py  gptsovits_adapter.py  rvc_adapter.py
aisinger/preprocess/: denoise.py  pipeline.py  separate.py  slice.py
aisinger/songlib/: store.py
aisinger/static/: aisinger.css  aisinger.js
aisinger/templates/: index.html
aisinger/tracklib/: store.py
aisinger/training/: _rvc_build_index.py  rvc_train.py
aisinger/ui/: compare.py  library.py  tier_mid.py  tier_pro.py  tier_simple.py
aisinger/voicelib/: schema.py  store.py
aisinger/workers/: gptsovits_worker.py  protocol.py
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/songs/: page.tsx
frontend/app/tracks/: page.tsx
frontend/app/voices/: page.tsx
frontend/app/voices/new/: page.tsx
frontend/components/: Avatar.tsx  ErrBox.tsx  FailedRow.tsx  Modal.tsx  Sidebar.tsx  Topbar.tsx  TrainingRow.tsx
frontend/lib/: api.ts  format.ts  sse.ts  types.ts  useApi.ts  waveform.ts
prototypes/: aisinger.html  aisinger_linear.html
scripts/: bootstrap_cuda.sh  bootstrap_gptsovits.sh  bootstrap_mac.sh  bootstrap_rvc_venv.sh  dev.sh  fetch_rvc_assets.sh  restart-front.sh  restart-server.sh  restart.sh  setup.sh  start.sh  stop.sh
