[project]
name = "aisinger"
version = "0.1.0"
description = "AI 歌手复刻：上传 1-5 首样本 → 提取音色 → 翻唱其他歌曲"
requires-python = ">=3.10,<3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "anyio>=4.0",
    "numpy>=1.24,<2",
    "soundfile>=0.12",
    "librosa>=0.10.2",
    "noisereduce>=3.0",
    "pyloudnorm>=0.1.1",
    "demucs>=4.0.1",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.5",
    "rich>=13.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
mac = [
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "f5-tts",
]
cuda = [
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "f5-tts",
]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aisinger"]

[tool.uv.sources]
# Mac users: install torch from default PyPI (MPS-enabled wheel).
# CUDA users: override at install time:
#   uv pip install -e ".[cuda]" --extra-index-url https://download.pytorch.org/whl/cu124

[tool.ruff]
line-length = 100
target-version = "py310"
